force-app/main/default/objects/Appointment_Commitment__c/Appointment_Commitment__c.object-meta.xml
<CustomObject>
    <description>This object stores the appointments committed and appointments booked for each date and time slot.
Jira Link - https://jira.anzx.service.anz/browse/ANZX-38305</description>
    <label>Appointment Commitment</label>
    <nameField>
        <displayFormat>AC-{0000000}</displayFormat>
        <label>Appointment Commitment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>