force-app/main/default/objects/Appointment_Commitment__c/fields/Appointment_Channel__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Channel__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>How appointment will happen</description>
    <label>Appointment Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
                <label>In-Person</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>