force-app/main/default/objects/Appointment_Commitment__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Count of the Appointment availability</description>
    <label>Available</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>