force-app/main/default/objects/Appointment_Commitment__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Count of accepted appointment commitment (contact requests for the appointment commitment slot)</description>
    <label>Confirmed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>