force-app/main/default/objects/Appointment_Commitment__c/fields/Date_AEDT__c.field-meta.xml
<CustomField>
    <fullName>Date_AEDT__c</fullName>
    <complianceGroup>Source - Salesforce;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>Date of the Appointment availability</description>
    <label>Date (AEDT)</label>
    <type>Date</type>
</CustomField>