force-app/main/default/objects/Appointment_Commitment__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Date and time of the Appointment availability</description>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>