force-app/main/default/objects/Appointment_Commitment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects appointment commitment to a location.</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Appointment Commitments</relationshipLabel>
    <relationshipName>Appointment_Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>