force-app/main/default/objects/Appointment_Commitment__c/fields/Slot_Available__c.field-meta.xml
<CustomField>
    <fullName>Slot_Available__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Status of the appointment availability</description>
    <formula>IF( Available__c &gt; Confirmed__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slot Available</label>
    <type>Checkbox</type>
</CustomField>