force-app/main/default/objects/Appointment_Commitment__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Time of the Appointment availability</description>
    <label>Time</label>
    <type>Time</type>
</CustomField>