force-app/main/default/objects/Appointment_Commitment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>Source - Salesforce;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>This field is used to store the type of the appointment commitment</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Wellbeing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Digital Support</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>