force-app/main/default/objects/Appointment_Commitment__c/validationRules/VR01_Confirmed_No_Greater_Than_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Confirmed_No_Greater_Than_Available</fullName>
    <active>true</active>
    <description>Ensures that you cant have more confirmed appointments than whats available</description>
    <errorConditionFormula>AND($Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false, Confirmed__c &gt; Available__c)</errorConditionFormula>
    <errorMessage>This appointment slot is no longer available, please choose a different date and time.</errorMessage>
</ValidationRule>